panko/tests/testsuite/snapshots/testsuite__typeck-panko__tests__cases__test_error_array_redeclaration_with_incompatible_length.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=typeck"
    - "--stop-after=typeck"
    - panko/tests/cases/test_error_array_redeclaration_with_incompatible_length.c
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
Error: redeclaration of `xs` with different type: `array<int; 1>` vs. `array<int; 2>`
   ╭─[panko/tests/cases/test_error_array_redeclaration_with_incompatible_length.c:3:5]
   │
 2 │ int xs[1];
   │     ─┬  
   │      ╰── previously declared here with type `array<int; 1>`
 3 │ int xs[2];
   │     ─┬  
   │      ╰── new declaration with different type `array<int; 2>`
───╯

Error: redeclaration of `ys` with different type: `array<int; 1>` vs. `array<int; 2>`
   ╭─[panko/tests/cases/test_error_array_redeclaration_with_incompatible_length.c:7:5]
   │
 6 │ int ys[];
   │     ─┬  
   │      ╰── previously declared here with type `array<int; 1>`
 7 │ int ys[2];
   │     ─┬  
   │      ╰── new declaration with different type `array<int; 2>`
───╯

Error: redeclaration of `zs` with different type: `array<int; 1>` vs. `array<int; 2>`
    ╭─[panko/tests/cases/test_error_array_redeclaration_with_incompatible_length.c:11:5]
    │
 10 │ int zs[1];
    │     ─┬  
    │      ╰── previously declared here with type `array<int; 1>`
 11 │ int zs[2];
    │     ─┬  
    │      ╰── new declaration with different type `array<int; 2>`
────╯
