panko/tests/testsuite/snapshots/testsuite__typeck-panko__tests__cases__test_error_invalid_implicit_conversion.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=typeck"
    - "--stop-after=typeck"
    - panko/tests/cases/test_error_invalid_implicit_conversion.c
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
Error: invalid implicit conversion from `ptr<int>` to `int`
   ╭─[panko/tests/cases/test_error_invalid_implicit_conversion.c:3:12]
   │
 3 │     return p;
   │            ┬  
   │            ╰── this is of type `ptr<int>`, which cannot be implicitly converted to `int`
───╯

Error: invalid implicit conversion from `ptr<char const>` to `int`
   ╭─[panko/tests/cases/test_error_invalid_implicit_conversion.c:8:12]
   │
 8 │     return p;
   │            ┬  
   │            ╰── this is of type `ptr<char const>`, which cannot be implicitly converted to `int`
───╯

Error: invalid implicit conversion from `int` to `ptr<int>`
    ╭─[panko/tests/cases/test_error_invalid_implicit_conversion.c:13:12]
    │
 13 │     return x;
    │            ┬  
    │            ╰── this is of type `int`, which cannot be implicitly converted to `ptr<int>`
────╯

Error: invalid implicit conversion from `int` to `ptr<char const>`
    ╭─[panko/tests/cases/test_error_invalid_implicit_conversion.c:18:12]
    │
 18 │     return x;
    │            ┬  
    │            ╰── this is of type `int`, which cannot be implicitly converted to `ptr<char const>`
────╯
